fixed alignment of troupe unread badge

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -158,7 +158,7 @@ a:hover {
 	height: 7px;
 	border-radius: 50em;
 	vertical-align: top;
-	margin-top: 4px;
+	margin-top: 5px;
 	background-color: @trpPurple;
 	border: 2px solid white;
 }
